k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spendify-front
  namespace: spendify
spec:
  selector:
    app: spendify-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
