k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spendify-front-ingress
  namespace: spendify
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt

spec:
  rules:
    - host: spendify.jvebri.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spendify-front
                port:
                  number: 80
  tls:
    - hosts:
        - spendify.jvebri.pro
      secretName: spendify-front-cert
